--- a/web/index.html
+++ b/web/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
-    <title>Курс JavaSE + Web.</title>
+    <title>Web-приложение обучающего курса basejava</title>
 </head>
 <body>
-<header>Приложение вебинара <a href="http://javawebinar.ru/basejava/" target="_blank">Практика Java. Разработка Web
+<header>Приложение курса <a href="http://topjava.ru/basejava/" target="_blank">"Практика Java. Разработка Web
     приложения."</a></header>
+<hr/>
 <h1>Курс JavaSE + Web</h1>
-<footer>Приложение вебинара <a href="http://javawebinar.ru/basejava/" target="_blank">Практика Java. Разработка Web
+<footer>Приложение курса <a href="http://topjava.ru/basejava/" target="_blank">"Практика Java. Разработка Web
     приложения."</a></footer>
 </body>
 </html>
